k8s-deploy/combined-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: combined-ingress
  annotations:
    kubernetes.io/ingress.class: "public"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: jenkins-bmleon.ukiyocazorla.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jenkins
            port:
              number: 8080
  - host: admin-ukiyo.ukiyocazorla.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ukiyo-admin-service
            port:
              number: 80
